fix undefined variables

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,9 @@
         </form>
         <% if(weather !== null){ %>
           <p><%= weather %></p>
-        <% } %><% if(error !== null){ %>
+        <% } %>
+
+        <% if(error !== null){ %>
           <p><%= error %></p>
         <% } %>
       </fieldset>
