--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,13 @@ body {
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
 }
+
+
+.title{
+  font-size: 12px; 
+  color: black;
+  text-align: center;
+}
 .container {
   width: 600px;
   margin: 0 auto;
