--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,10 @@
         <% if(error !== null){ %>
           <p><%= error %></p>
         <% } %>
-
-        <% if(condition !== null){ %>
-          <p><% condition %></p>
-        <% } %>
       </fieldset>
+      <div>
+        <img src='<%= conditionIconUrl %>' />
+      </div> 
     </div>
   </body>
 </html>
