--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,22 @@
 body {
-  width: 800px;
+  width: 300px;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
+  background: #4E4D4A;
+  color: white;
 }
-
-
 .title{
+  margin-left: 10px;
+  background: grey;
   font-size: 12px; 
-  color: black;
   text-align: center;
 }
 .container {
-  width: 600px;
+  width: 300px;
   margin: 0 auto;
 }
 fieldset {
-  display: block;
+  width: 300px;
   border: 0px;
   border-image-source: initial;
   border-image-slice: initial;
@@ -23,7 +24,7 @@ fieldset {
   border-image-outset: initial;
   border-image-repeat: initial;
   min-width: -webkit-min-content;
-  padding: 30px;
+  margin: auto;
 }
 
 .ghost-input, p {
@@ -35,8 +36,6 @@ fieldset {
   outline: none;
   width: 100%;
   box-sizing: border-box;
-  color: #4b545f;
-  background: #fff;
   font-family: Open Sans,Verdana;
   padding: 10px 15px;
   margin: 30px 0px;
@@ -46,19 +45,21 @@ fieldset {
   border-bottom:1px solid #ddd;
 }
 .ghost-button {
+  cursor: pointer;
   background-color: transparent;
   border:2px solid #ddd;
   padding:10px 30px;
   width: 100%;
-  min-width: 350px;
+  min-width: 300px;
   transition: all 0.1s ease-in-out;
   font-family: 'Open Sans', sans-serif;
   color: grey;
   font-size: 14px;
 }
 .ghost-button:hover {
-  border:2px solid #515151;
+  border:2px solid lightgrey;
+  color: white !important;
 }
 p {
-  color: #E64A19;
+  color: white;
 }
