--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         <% } %>
       </fieldset>
       <div>
-        <img src='<%= conditionIconUrl %>' />
+        <img class="icon" src='<%= conditionIconUrl %>' />
       </div> 
     </div>
   </body>
