--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <p class="title">Simple node.js weather app</p>
+      <p class="title">Node.js weather app</p>
       <fieldset>
         <form action="/" method="post">
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
