make some adjustments for the server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://electricalchemy.io/weather-app/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
       <p class="title">Node.js weather app</p>
       <fieldset>
-        <form action="/" method="post">
+        <form action="/weather-app" method="post">
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
           <input type="submit" class="ghost-button" value="Get Weather">
         </form>
